# dpytest

./: .gitignore  .readthedocs.yml  .travis.yml  HISTORY.md  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  release-requirements.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: lint-ci.yml  python-release.yml  test-ci.yml
discord/ext/test/: __init__.py  _types.py  backend.py  backend.pyi  callbacks.py  callbacks.pyi  easy_verify.py  factories.py  factories.pyi  runner.py  runner.pyi  state.py  state.pyi  utils.py  verify.py  voice.py  websocket.py  websocket.pyi
docs/: conf.py  index.rst
docs/_static/css/: spacing.css
docs/modules/: backend.rst  callbacks.rst  factories.rst  index.rst  runner.rst  state.rst  utils.rst  verify.rst  websocket.rst
docs/tutorials/: getting_started.rst  index.rst  using_pytest.rst
dpytest/: __init__.py  backend.py  factories.py
tests/: conftest.py  dm_channel_pytest.py  permissions_pytest.py  test_activity.py  test_ban.py  test_cog_echo.py  test_configure.py  test_create_channel.py  test_dmchannel.py  test_edit.py  test_edit_cog.py  test_fetch_message.py  test_get.py  test_get_channel_history.py  test_member.py  test_member_join.py  test_mentions.py  test_message.py  test_permissions.py  test_reactions.py  test_role.py  test_send.py  test_utils.py  test_verify_embed.py  test_verify_file.py  test_verify_message.py  test_voice.py
tests/data/: loremimpsum.txt
tests/internal/cogs/: echo.py  (+3 more)
